adding validation and pattern matching